--- a/package.xml
+++ b/package.xml
@@ -19,14 +19,18 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>nav2_msgs</depend>
-  <depend>pcl_conversions</depend>
-  <depend>pcl_1.3</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <test_depend>roscpp</test_depend>
 
+  <!-- Documentation for external dependency -->
+  <depend>pcl_conversions</depend>
+  <depend>pcl_1.3</depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
+    <!-- Liquid-DSP is a system dependency. Install via: sudo apt-get install libliquid-dev -->
   </export>
 </package>
